--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -65,8 +65,8 @@ h1 {
     color: $hal-cyan;
     font-weight: bold;
 
-    margin-top: .75em;
-    margin-bottom: .5em;
+    margin-top: .5em;
+    margin-bottom: 1em;
 
     strong, b {
         color: tint($hal-cyan, 50%);
