--- a/sass/style.scss
+++ b/sass/style.scss
@@ -49,7 +49,7 @@
 @import 'components/buttons';
 @import 'components/cards';
 @import 'components/check-box';
-@import 'components/dash-box';
+@import 'components/meta-box';
 @import 'components/icons';
 @import 'components/nav';
 @import 'components/pagination';
