--- a/templates/admin/system_dashboard.twig
+++ b/templates/admin/system_dashboard.twig
@@ -13,22 +13,20 @@
     </div>
 
     <h2>Agent Status</h2>
-    <div class="details-box">
-        <ul>
-            <li>
-                <h6>Agent 1</h6>
-                <div class="pre-wrapper">
-                    <pre>tbd</pre>
-                </div>
-            </li>
+    <ul class="meta-box">
+        <li>
+            <h6>Agent 1</h6>
+            <div class="pre-wrapper">
+                <pre>tbd</pre>
+            </div>
+        </li>
 
-            <li>
-                <h6>Agent 2</h6>
-                <div class="pre-wrapper">
-                    <pre>tbd</pre>
-                </div>
-            </li>
-        </ul>
-    </div>
+        <li>
+            <h6>Agent 2</h6>
+            <div class="pre-wrapper">
+                <pre>tbd</pre>
+            </div>
+        </li>
+    </ul>
 
 {% endblock %}
