--- a/templates/credentials/credential.twig
+++ b/templates/credentials/credential.twig
@@ -1,7 +1,7 @@
 {% extends 'base.twig' %}
 {% import 'macros.twig' as macros %}
 
-{% set page_title = 'Credential - ' ~ credential.name %}
+{% set page_title = 'Credential' %}
 
 {% set is_admin = current_authorizations.isSuper() %}
 
@@ -12,7 +12,7 @@
     {% endif %}
 
     <div class="nav--page">
-        <h1>Credential</h1>
+        <h1>{{ page_title }}</h1>
 
         <p class="nav--page__back">
             <a class="btn btn--small btn--back" href="{{ uriFor('credentials') }}">Back to Credentials</a>
@@ -24,33 +24,33 @@
 
     <h2>Applications</h2>
     {% if targets %}
-    <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
+    <table class="table--spacing-medium">
         <thead>
-        <tr>
-            <th>Application</th>
-            <th>Environment</th>
-            <th>Target</th>
-            <th class="t10"></th>
-        </tr>
+            <tr>
+                <th>Application</th>
+                <th>Environment</th>
+                <th>Target</th>
+                <th class="t10"></th>
+            </tr>
         </thead>
         <tbody>
-        {% for target in targets %}
+            {% for target in targets %}
 
-            <tr>
-                <td>
-                    <a href="{{ uriFor('application', {'application': target.application.id}) }}">{{ target.application.name }}</a>
-                </td>
-                <td>
-                    {{ target.group.environment.name }}
-                </td>
-                <td>
-                    {{ target.format }}
-                </td>
-                <td class="tr">
-                    <a class="btn btn--tiny" href="{{ uriFor('target', {application: target.application.id, target: target.id}) }}">View</a>
-                </td>
-            </tr>
-        {% endfor %}
+                <tr>
+                    <td>
+                        <a href="{{ uriFor('application', {'application': target.application.id}) }}">{{ target.application.name }}</a>
+                    </td>
+                    <td>
+                        {{ target.group.environment.name }}
+                    </td>
+                    <td>
+                        {{ target.format }}
+                    </td>
+                    <td class="tr">
+                        <a class="btn btn--tiny" href="{{ uriFor('target', {application: target.application.id, target: target.id}) }}">View</a>
+                    </td>
+                </tr>
+            {% endfor %}
         </tbody>
     </table>
     {% else %}
@@ -62,14 +62,14 @@
             {% if is_admin %}
                 <a class="btn btn--action" href="{{ uriFor('credential.edit', {'credential': credential.id}) }}">Edit Credential</a>
             {% else %}
-                <button class="btn btn--disabled">Edit Credential</button>
+                {{ macros.disabled_button('Edit Credential') }}
             {% endif %}
         </li>
         <li>
             {% if is_admin %}
                 <a class="btn btn--destructive" href="{{ uriFor('credential.remove', {'credential': credential.id}) }}">Remove Credential</a>
             {% else %}
-                <button class="btn btn--disabled">Remove Credential</button>
+                {{ macros.disabled_button('Remove Credential') }}
             {% endif %}
         </li>
     </ul>
@@ -77,35 +77,33 @@
 {% endblock %}
 
 {% block meta_table %}
-    <div class="details-box">
-        <ul>
-            <li>
-                <h6>Name</h6>
-                {{ credential.name }}
-            </li>
+    <ul class="meta-box">
+        <li>
+            <h6>Name</h6>
+            {{ credential.name }}
+        </li>
 
-            <li>
-                <h6>Type</h6>
-                {% if credential.type == 'aws_static' %}
-                    AWS Static Token
-                {% elseif credential.type == 'aws_role' %}
-                    AWS STS Role
-                {% elseif credential.type == 'privatekey' %}
-                    Private Key
-                {% endif %}
-            </li>
+        <li>
+            <h6>Type</h6>
+            {% if credential.type == 'aws_static' %}
+                AWS Static Token
+            {% elseif credential.type == 'aws_role' %}
+                AWS STS Role
+            {% elseif credential.type == 'privatekey' %}
+                Private Key
+            {% endif %}
+        </li>
 
-            <li>
-                <h6>Internal Credential?</h6>
-                {% if credential.isInternal %}
-                    {{ macros.icon('locked') }}
-                    Yes, for Administrative use only
-                {% else %}
-                    No
-                {% endif %}
-            </li>
-        </ul>
-    </div>
+        <li>
+            <h6>Internal Credential?</h6>
+            {% if credential.isInternal %}
+                {{ macros.icon('locked') }}
+                Yes, for Administrative use only
+            {% else %}
+                No
+            {% endif %}
+        </li>
+    </ul>
 {% endblock %}
 
 {% block credential_details %}
