--- a/templates/credentials/credentials.twig
+++ b/templates/credentials/credentials.twig
@@ -18,7 +18,7 @@
         {% if is_admin %}
             <a class="btn" href="{{ uriFor('credential.add') }}">Add Credentials</a>
         {% else %}
-            <button class="btn btn--disabled">Add Credentials</button>
+            {{ macros.disabled_button('Add Credentials') }}
         {% endif %}
     </p>
 
@@ -26,7 +26,7 @@
 
 {% block cred_table %}
     {% if credentials %}
-        <table class="table--spacing-medium table--striped">
+        <table class="table--spacing-medium">
             <thead>
                 <tr>
                     <th>ID</th>
