--- a/templates/queue/builds_history.twig
+++ b/templates/queue/builds_history.twig
@@ -25,7 +25,7 @@
 {% endblock %}
 
 {% block builds %}
-    <table class="table--spacing-medium" data-tablesaw-mode="stack">
+    <table class="table--spacing-medium">
         <thead>
             <tr>
                 <th>Push</th>
