--- a/templates/queue/queue.twig
+++ b/templates/queue/queue.twig
@@ -9,8 +9,8 @@
 
         <p class="nav--page__back">
             <a class="btn btn--small btn--back" href="{{ uriFor('queue.history.page1') }}">Queue History</a>
-            <a class="btn btn--small btn--back" href="{{ uriFor('builds.history.page1') }}">All builds</a>
-            <a class="btn btn--small btn--back" href="{{ uriFor('releases.history.page1') }}">All pushes</a>
+            <a class="btn btn--small btn--back" href="{{ uriFor('builds.history.page1') }}">All Builds</a>
+            <a class="btn btn--small btn--back" href="{{ uriFor('releases.history.page1') }}">All Releases</a>
         </p>
     </div>
 
