--- a/templates/user/users.twig
+++ b/templates/user/users.twig
@@ -18,7 +18,7 @@
 {% block user_table %}
 
     {% if users %}
-        <table class="table--spacing-medium table--striped">
+        <table class="table--spacing-medium">
             <thead>
                 <tr>
                     <th>User ID</th>
