--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -1,4 +1,4 @@
-.cards, .cards--dual {
+.cards {
     margin-top: 1em;
     margin-bottom: 1em;
 
@@ -18,24 +18,6 @@
 
             &:nth-child(2n+2) {
                 margin-left: 35px;
-            }
-        }
-    }
-}
-
-.cards {
-    @include breakpoint($bp-large) {
-        > li {
-            width: 31%;
-
-            // reset style from medium breakpoint
-            &:nth-child(2n+2) {
-                margin-left: 0;
-            }
-
-            &:nth-child(3n+2),
-            &:nth-child(3n+3) {
-                margin-left: 30px;
             }
         }
     }
@@ -71,13 +53,18 @@
         font-size: .75em;
         margin-bottom: .5em;
     }
-}
 
-.card__details li {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    line-height: ms(3);
+    ul {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    li {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        line-height: ms(3);
+    }
 }
 
 .card__details--divided > ul > li {
