--- a/templates/application/macros.twig
+++ b/templates/application/macros.twig
@@ -1,11 +1,11 @@
-{% macro pushCard(application, target, active) %}
+{% macro pushCard(application, target, last_release) %}
     {% import 'macros.twig' as macros %}
     {% import 'macros.git.twig' as git_macros %}
 
     <article class="card">
         <header class="card__header">
             <h4>
-                <a href="{{ uriFor('group', {'group': target.group.id}) }}">{{ target.format }}</a>
+                <a href="{{ uriFor('target', {'application': target.application.id, 'target': target.id}) }}">{{ target.format() }}</a>
 
                 {% if target.url %}
                     <a class="icon--link" href="{{ target.url }}">
@@ -13,7 +13,7 @@
                     </a>
                 {% endif %}
 
-                {% if active %}
+                {% if last_release %}
                     <a class="rollback icon--link" href="{{ uriFor('rollback.page1', {'application': application.id, 'target': target.id}) }}" title="View push history or rollback to a successful build">
                         {{ macros.icon('revert') }}
                     </a>
@@ -23,50 +23,38 @@
 
         <section class="card__details">
             <ul>
-                {# push details #}
                 <li>
-                    <span>Last Release:</span>
-                    {% if active %}
-                        {{ macros.job_status(active, true) }}
-                        (<a href="{{ uriFor('release', {'release': active.id}) }}">{{ active.id|formatPushId }}</a>)
-                    {% else %}
-                        None
-                    {% endif %}
-                </li>
-                <li>
-                    <span>Released on:</span>
-                    {% if active.created %}
-                        {{ active.created|html5date }}
+                    <b>Deployed:</b>
+                    {% if last_release.created %}
+                        {{ last_release.created|html5date }}
                     {% else %}
                         Never
                     {% endif %}
                 </li>
 
-                {# build details #}
                 <li>
-                    <span>Build:</span>
-                    {% if active %}
-                        <a href="{{ uriFor('build', {'build': active.build.id}) }}">{{ active.build.id|formatBuildId }}</a>
+                    <b>Release:</b>
+                    {% if last_release %}
+                        {{ macros.job_status_prefix(last_release, true) }}
                     {% else %}
-                        Unknown
+                        None
                     {% endif %}
                 </li>
                 <li>
-                    <span>Reference:</span>
-                    {% if active %}
-                        {% set isCurrent = githubCommitIsCurrent(application.github.owner, application.github.repository, active.build.reference, active.build.commit) %}
-                        {{ git_macros.gitref(active.build, true, isCurrent, true) }}
-
+                    <b>Build:</b>
+                    {% if last_release %}
+                        {{ macros.job_status_prefix(last_release.build, true) }}
                     {% else %}
-                        Unknown
+                        None
                     {% endif %}
                 </li>
                 <li>
-                    <span>Commit:</span>
-                    {% if active %}
-                        {{ git_macros.gitcommit(active.build) }}
+                    <b>Source Code:</b>
+                    {% if last_release %}
+                        {% set is_gitref_current = githubCommitIsCurrent(application.github.owner, application.github.repository, last_release.build.reference, last_release.build.commit) %}
+                        {{ git_macros.gitref(last_release.build, true, is_gitref_current, true) }}
                     {% else %}
-                        Unknown
+                        None
                     {% endif %}
                 </li>
             </ul>
