--- a/templates/environment/edit_environment.twig
+++ b/templates/environment/edit_environment.twig
@@ -1,10 +1,16 @@
 {% extends 'base.twig' %}
 {% import 'macros.form.twig' as form_macros %}
 
-{% set page_title = 'Edit Environment - ' ~ environment.name %}
+{% set page_title = 'Edit Environment' %}
 
 {% block content %}
-    <h1>Edit Environment</h1>
+    <div class="nav--page">
+        <h1>{{ page_title }}</h1>
+
+        <p class="nav--page__back">
+            <a class="btn btn--small btn--back" href="{{ uriFor('environments') }}">Back to Environments</a>
+        </p>
+    </div>
 
     <div class="form-wrapper">
         {{ form_macros.formErrors(errors) }}
@@ -35,7 +41,7 @@
                 </li>
             </ul>
 
-            <ul>
+            <ul class="list--bare">
                 <li><input type="submit" class="btn btn--action" value="Save Changes"></li>
                 <li><a class="btn" href="{{ uriFor('environment', {'environment': environment.id}) }}">Cancel</a></li>
             </ul>
