--- a/templates/environment/environment.twig
+++ b/templates/environment/environment.twig
@@ -1,26 +1,31 @@
 {% extends 'base.twig' %}
+{% import 'macros.twig' as macros %}
 
-{% set page_title = 'Environment - ' ~ env.name %}
+{% set page_title = 'Environment' %}
 
 {% set is_admin = current_authorizations.isSuper() %}
 {% set is_removable = is_admin and not servers_i_dunno %}
 
 {% block content %}
-    <h1>Environment</h1>
+    <div class="nav--page">
+        <h1>{{ page_title }}</h1>
 
-    <div class="details-box">
-        <ul>
-            <li>
-                <h6>Name</h6>
-                {{ environment.name }}
-            </li>
-
-            <li>
-                <h6>Is Production Environment?</h6>
-                {{ environment.isProduction ? 'Yes' : 'No' }}
-            </li>
-        </ul>
+        <p class="nav--page__back">
+            <a class="btn btn--small btn--back" href="{{ uriFor('environments') }}">Back to Environments</a>
+        </p>
     </div>
+
+    <ul class="meta-box">
+        <li>
+            <h6>Environment</h6>
+            {{ environment.name }}
+        </li>
+
+        <li>
+            <h6>Is Production Environment?</h6>
+            {{ environment.isProduction ? 'Yes' : 'No' }}
+        </li>
+    </ul>
 
     {% if not is_removable %}
         <p><b>Note:</b> All associated servers must be removed or transferred to remove this environment.</p>
@@ -31,20 +36,20 @@
 {% endblock %}
 
 {% block actions %}
-    <ul>
+    <ul class="list--bare">
         <li><a class="btn" href="{{ uriFor('environments') }}">Environments</a></li>
         <li>
             {% if is_admin %}
                 <a class="btn btn--action" href="{{ uriFor('environment.edit', {'environment': environment.id}) }}">Edit Environment</a>
             {% else %}
-                <button class="btn btn--action btn--disabled">Edit Environment</button>
+                {{ macros.disabled_button('Edit Environment') }}
             {% endif %}
         </li>
         <li>
             {% if is_removable %}
                 <a class="btn btn--destructive" href="{{ uriFor('environment.remove', {'environment': environment.id}) }}">Remove Environment</a>
             {% else %}
-                <button class="btn btn--destructive btn--disabled">Remove Environment</button>
+                {{ macros.disabled_button('Remove Environment') }}
             {% endif %}
         </li>
     </ul>
