--- a/templates/environment/environments.twig
+++ b/templates/environment/environments.twig
@@ -10,13 +10,13 @@
 
     {{ block('env_table') }}
 
-    <ul>
+    <ul class="list--bare">
         <li><a class="btn" href="{{ uriFor('applications') }}">Applications</a></li>
         <li>
             {% if is_admin %}
                 <a class="btn btn--action" href="{{ uriFor('environment.add') }}">Add Environment</a>
             {% else %}
-                <button class="btn btn--action btn--disabled">Add Environment</button>
+                {{ macros.disabled_button('Add Environment') }}
             {% endif %}
         </li>
     </ul>
@@ -26,12 +26,12 @@
 {% block env_table %}
 
     {% if envs %}
-        <table class="table--spacing-medium table--striped">
+        <table class="table--spacing-medium">
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th></th>
+                    <th class="t15">ID</th>
+                    <th>Environment</th>
+                    <th class="t15"></th>
                 </tr>
             </thead>
             <tbody>
@@ -46,7 +46,7 @@
                             {% endif %}
                         </td>
                         <td>
-                            <a href="{{ uriFor('environment', {'environment': environment.id}) }}">View</a>
+                            <a href="{{ uriFor('environment', {'environment': environment.id}) }}">Manage</a>
                         </td>
                     </tr>
                 {% endfor %}
