--- a/templates/macros.twig
+++ b/templates/macros.twig
@@ -221,8 +221,17 @@ Build <a href="/build/123456">123456</a>
 #}
 {% macro job_status_prefix_link(job, prefix) %}
     {% if job is release %}
-        {{ prefix }}<a href="{{ uriFor('release', {'release': job.id}) }}">{{ job.id|formatPushId }}</a>
+        {{ prefix }}<a href="{{ uriFor('release', {'release': job.id}) }}">{{ job|shortGUID }}</a>
     {% else %}
-        {{ prefix }}<a href="{{ uriFor('build', {'build': job.id}) }}">{{ job.id|formatBuildId }}</a>
+        {{ prefix }}<a href="{{ uriFor('build', {'build': job.id}) }}">{{ job|shortGUID }}</a>
     {% endif %}
+{% endmacro %}
+
+
+{% macro disabled_button(text, size) %}
+    {% if size in ['tiny', 'small', 'large'] %}
+        {% set btn_size = ' btn--' ~ size %}
+    {% endif %}
+
+    <button class="btn btn--disabled{{ btn_size }}">{{ text }}</button>
 {% endmacro %}
