--- a/templates/organization/add_organization.twig
+++ b/templates/organization/add_organization.twig
@@ -4,7 +4,13 @@
 {% set page_title = 'Add Organization' %}
 
 {% block content %}
-    <h1>{{ page_title }}</h1>
+    <div class="nav--page">
+        <h1>{{ page_title }}</h1>
+
+        <p class="nav--page__back">
+            <a class="btn btn--small btn--back" href="{{ uriFor('applications') }}">Back to Applications</a>
+        </p>
+    </div>
 
     <div class="form-wrapper">
         {{ form_macros.formErrors(errors) }}
@@ -32,7 +38,7 @@
                 </li>
             </ul>
 
-            <ul>
+            <ul class="list--bare">
                 <li><input type="submit" class="btn btn--action" value="Add Organization"></li>
                 <li><a class="btn" href="{{ uriFor('applications') }}">Cancel</a></li>
             </ul>
