--- a/templates/organization/edit_organization.twig
+++ b/templates/organization/edit_organization.twig
@@ -1,10 +1,16 @@
 {% extends 'base.twig' %}
 {% import 'macros.form.twig' as form_macros %}
 
-{% set page_title = 'Edit Organization - ' ~ organization.name %}
+{% set page_title = 'Edit Organization' %}
 
 {% block content %}
-    <h1>Edit Organization</h1>
+    <div class="nav--page">
+        <h1>{{ page_title }}</h1>
+
+        <p class="nav--page__back">
+            <a class="btn btn--small btn--back" href="{{ uriFor('applications') }}">Back to Applications</a>
+        </p>
+    </div>
 
     <div class="form-wrapper">
         {{ form_macros.formErrors(errors) }}
@@ -32,7 +38,7 @@
                 </li>
             </ul>
 
-            <ul>
+            <ul class="list--bare">
                 <li><input type="submit" class="btn btn--action" value="Save Changes"></li>
                 <li><a class="btn" href="{{ uriFor('organization', {'organization': organization.id}) }}">Cancel</a></li>
             </ul>
