--- a/templates/partial.release_table.twig
+++ b/templates/partial.release_table.twig
@@ -4,20 +4,15 @@
     <thead>
         <tr>
             <th>Push</th>
-            <th>Status</th>
             <th>Env → Server</th>
             <th>Reference</th>
-            <th>User</th>
-            <th>Time</th>
+            <th>Deployed On</th>
         </tr>
     </thead>
     <tbody>
     {% for release in releases %}
         <tr>
-            <td><a href="{{ uriFor('release', {'release': release.id}) }}">{{ release.id|formatPushId }}</a></td>
-            <td>
-                {{ macros.job_status(release) }}
-            </td>
+            <td>{{ macros.job_status_prefix(release, true) }}</td>
             <td>
                 {% if release.target %}
                     {{ release.target.group.environment.name }} → {{ release.target.format(true) }}
@@ -25,19 +20,20 @@
                     Unknown
                 {% endif %}
             </td>
-            <td>Build <a href="{{ uriFor('build', {'build': release.build.id}) }}">{{ release.build.id|formatBuildId }}</a></td>
+            <td>Build <a href="{{ uriFor('build', {'build': release.build.id}) }}">{{ release.build.id|shortGUID }}</a></td>
             <td>
+                {{ release.created|html5date }}
+                by
                 {% if release.user %}
-                    <a href="{{ uriFor('user', {'user': release.user.id}) }}">{{ release.user.username }}</a>
+                    {{ release.user.username }}
                 {% else %}
                     Unknown
                 {% endif %}
             </td>
-            <td>{{ release.created|html5date }}</td>
         </tr>
     {% else %}
         <tr>
-            <td colspan="6">No releases found.</td>
+            <td colspan="4">No releases found.</td>
         </tr>
     {% endfor %}
     </tbody>
