--- a/templates/permissions/remove_permission.twig
+++ b/templates/permissions/remove_permission.twig
@@ -16,43 +16,43 @@
     } only %}
 
     <h2>Remove the following permissions</h2>
-    <div class="details-box">
-        <ul class="mbn">
+    <ul class="meta-box">
 
-            <li>User Type</li>
-            <li>
-                {% if permission.type == 'member' %}
-                    {{ macros.status('Member', 'info') }}
-                {% endif %}
-                {% if permission.type == 'owner' %}
-                    {{ macros.status('Owner', 'notice') }}
-                {% endif %}
-                {% if permission.type == 'admin' %}
-                    {{ macros.status('Admin', 'warning') }}
-                {% endif %}
-                {% if permission.type == 'super' %}
-                    {{ macros.status('Super', 'error') }}
-                {% endif %}
-            </li>
-
-            {% if permission.application %}
-                <li>Application</li>
-                <li><a href="{{ uriFor('application', {'application': permission.application.id}) }}">{{ permission.application.name }}</a></li>
-            {% elseif permssion.organization %}
-                <li>Organization</li>
-                <li><a href="{{ uriFor('organization', {'organization': permission.organization.id}) }}">{{ permission.organization.name }}</a></li>
-            {% elseif permssion.environment %}
-                <li>Environment</li>
-                <li><a href="{{ uriFor('environment', {'environment': permission.environment.id}) }}">{{ permission.environment.name }}</a></li>
+        <li>
+            <h6>User Type</h6>
+            {% if permission.type == 'member' %}
+                {{ macros.status('Member', 'info') }}
             {% endif %}
-        </ul>
-    </div>
+            {% if permission.type == 'owner' %}
+                {{ macros.status('Owner', 'notice') }}
+            {% endif %}
+            {% if permission.type == 'admin' %}
+                {{ macros.status('Admin', 'warning') }}
+            {% endif %}
+            {% if permission.type == 'super' %}
+                {{ macros.status('Super', 'error') }}
+            {% endif %}
+        </li>
+
+        <li>
+            {% if permission.application %}
+                <h6>Application</h6>
+                <a href="{{ uriFor('application', {'application': permission.application.id}) }}">{{ permission.application.name }}</a>
+            {% elseif permssion.organization %}
+                <h6>Organization</h6>
+                <a href="{{ uriFor('organization', {'organization': permission.organization.id}) }}">{{ permission.organization.name }}</a>
+            {% elseif permssion.environment %}
+                <h6>Environment</h6>
+                <a href="{{ uriFor('environment', {'environment': permission.environment.id}) }}">{{ permission.environment.name }}</a>
+            {% endif %}
+        </li>
+    </ul>
 
     <h3>Are you sure?</h3>
     <p>You're about to remove some of this user's permissions. Do you want to continue?</p>
 
     <form class="form-wrapper" method="post">
-        <ul>
+        <ul class="list--bare">
             <li><input class="btn btn--destructive" type="submit" value="Remove"></li>
             <li><a class="btn" href="{{ uriFor('admin.permissions') }}">Cancel</a></li>
         </ul>
