--- a/templates/queue/queue_history.twig
+++ b/templates/queue/queue_history.twig
@@ -13,8 +13,8 @@
 
         <p class="nav--page__back">
             <a class="btn btn--small btn--back" href="{{ uriFor('queue') }}">Current Job Queue</a>
-            <a class="btn btn--small btn--back" href="{{ uriFor('builds.history.page1') }}">All builds</a>
-            <a class="btn btn--small btn--back" href="{{ uriFor('releases.history.page1') }}">All pushes</a>
+            <a class="btn btn--small btn--back" href="{{ uriFor('builds.history.page1') }}">All Builds</a>
+            <a class="btn btn--small btn--back" href="{{ uriFor('releases.history.page1') }}">All Releases</a>
         </p>
     </div>
 
