--- a/templates/queue/releases_history.twig
+++ b/templates/queue/releases_history.twig
@@ -25,7 +25,7 @@
 
 
 {% block releases %}
-    <table class="table--spacing-medium" data-tablesaw-mode="stack">
+    <table class="table--spacing-medium">
         <thead>
             <tr>
                 <th>Release</th>
