--- a/templates/release/release.twig
+++ b/templates/release/release.twig
@@ -3,12 +3,12 @@
 {% import 'macros.git.twig' as git_macros %}
 {% set js_components = ['release_info'] %}
 
-{% set page_title = 'Release : ' ~ release.application.name %}
+{% set page_title = 'Release' %}
 
 {% block content %}
 
     <div class="nav--page">
-        <h1>Release - <b>{{ release.application.name }}</b></h1>
+        <h1>{{ page_title }}</h1>
 
         <p class="nav--page__back">
             <a class="btn btn--small btn--back" href="{{ uriFor('application.dashboard', {'application': release.application.id}) }}">Back to Application Dashboard</a>
@@ -16,105 +16,96 @@
     </div>
 
     <h2>Release Details</h2>
+    <ul class="meta-box">
+        <li>
+            <h6>ID</h6>
+            {{ release.id }}
+        </li>
 
-    <div class="details-box">
-        <ul class="mbn">
-            <li>
-                <h6>ID</h6>
-                {{ release.id }}
-            </li>
-
-            <li>
-                <h6>Target</h6>
-                {% if release.target %}
-                    <a href="{{ uriFor('group', {'group': release.target.group.id}) }}">{{ release.target.format }}</a>
-                {% else %}
-                    Unknown
-                {% endif %}
-            </li>
-
-            <li>
-                <h6>Parameters</h6>
-                {{ release.target.formatParameters }}
-            </li>
-
-            {% if release.target and release.target.url %}
-                <li>
-                    <h6>URL</h6>
-                    <a href="{{ release.target.url }}">{{ release.target.url }}</a>
-                </li>
+        <li>
+            <h6>Target</h6>
+            {% if release.target %}
+                <a href="{{ uriFor('group', {'group': release.target.group.id}) }}">{{ release.target.format }}</a>
+            {% else %}
+                Unknown
             {% endif %}
-        </ul>
-    </div>
+        </li>
+
+        <li>
+            <h6>Parameters</h6>
+            {{ release.target.formatParameters }}
+        </li>
+
+        {% if release.target and release.target.url %}
+            <li>
+                <h6>URL</h6>
+                <a href="{{ release.target.url }}">{{ release.target.url }}</a>
+            </li>
+        {% endif %}
+    </ul>
 
     <h2>Build Details</h2>
+    <ul class="meta-box">
+        <li>
+            <h6>Build ID</h6>
+            <a href="{{ uriFor('build', {'build': release.build.id}) }}">{{ release.build.id|formatBuildId }}</a>
+            {% if (release.build.status == 'removed') %}
+                (Removed)
+            {% endif %}
+        </li>
 
-    <div class="details-box">
-        <ul class="mbn">
-            <li>
-                <h6>Build ID</h6>
-                <a href="{{ uriFor('build', {'build': release.build.id}) }}">{{ release.build.id|formatBuildId }}</a>
-                {% if (release.build.status == 'removed') %}
-                    (Removed)
-                {% endif %}
-            </li>
+        <li>
+            <h6>Application</h6>
+            <a href="{{ uriFor('application', {'application': release.application.id}) }}">{{ release.application.name }}</a>
+        </li>
 
-            <li>
-                <h6>Application</h6>
-                <a href="{{ uriFor('application', {'application': release.application.id}) }}">{{ release.application.name }}</a>
-            </li>
+        <li>
+            <h6>Environment</h6>
+            {{ release.build.environment ? release.build.environment.name : 'Any' }}
+        </li>
 
-            <li>
-                <h6>Environment</h6>
-                {{ release.build.environment ? release.build.environment.name : 'Any' }}
-            </li>
+        <li>
+            <h6>Reference</h6>
+            {% set isCurrent = githubCommitIsCurrent(release.application.github.owner, release.application.github.repository, release.build.reference, release.build.commit) %}
+            {{ git_macros.gitref(release.build, false, isCurrent) }}
+        </li>
 
-            <li>
-                <h6>Reference</h6>
-                {% set isCurrent = githubCommitIsCurrent(release.application.github.owner, release.application.github.repository, release.build.reference, release.build.commit) %}
-                {{ git_macros.gitref(release.build, false, isCurrent) }}
-            </li>
-
-            <li>
-                <h6>Commit</h6>
-                {{ git_macros.gitcommit(release.build) }}
-            </li>
-        </ul>
-    </div>
+        <li>
+            <h6>Commit</h6>
+            {{ git_macros.gitcommit(release.build) }}
+        </li>
+    </ul>
 
     <h2>Release Status</h2>
+    <ul class="meta-box">
+        <li>
+            <h6>Status</h6>
+            {{ macros.job_status(release, true) }}
+        </li>
 
-    <div class="details-box">
-        <ul class="mbn">
-            <li>
-                <h6>Status</h6>
-                {{ macros.job_status(release, true) }}
-            </li>
+        <li>
+            <h6>Time</h6>
+            <span class="js-release-start">{{ release.start|html5date }}</span>
+        </li>
 
-            <li>
-                <h6>Time</h6>
-                <span class="js-release-start">{{ release.start|html5date }}</span>
-            </li>
-
-            <li>
-                <h6>Duration</h6>
-                <span class="js-release-duration">
-                    {% if release.start and release.end %}
-                        {{ html5duration(release.start, release.end) }}
-                    {% endif %}
-                </span>
-            </li>
-
-            <li>
-                <h6>User</h6>
-                {% if release.user %}
-                    <a href="{{ uriFor('user', {'user': release.user.id}) }}">{{ release.user.name }}</a>
-                {% else %}
-                    Unknown
+        <li>
+            <h6>Duration</h6>
+            <span class="js-release-duration">
+                {% if release.start and release.end %}
+                    {{ html5duration(release.start, release.end) }}
                 {% endif %}
-            </li>
-        </ul>
-    </div>
+            </span>
+        </li>
+
+        <li>
+            <h6>User</h6>
+            {% if release.user %}
+                <a href="{{ uriFor('user', {'user': release.user.id}) }}">{{ release.user.name }}</a>
+            {% else %}
+                Unknown
+            {% endif %}
+        </li>
+    </ul>
 
     <h2>Release Events</h2>
     {% include 'partial.event_table.twig' with {logs: logs, canLoad: release.isFinished } only %}
