--- a/templates/user/placeholder.remove_github_token.twig
+++ b/templates/user/placeholder.remove_github_token.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <h2>{{ page_title }}</h2>
 
-    <div class="details-box">
+    <div class="meta-box">
         <h1>Are you sure?</h1>
 
         <p>This will revoke GitHub authorization and disable updates to GitHub when you deploy a build.</p>
